    of ghc.
  * Added Propellor.Property.impossible
  * Fail2Ban: Added several additional properties.
    Thanks, Félix Sipma.
  * Fail2Ban: Renamed jail.d conf file to use .local.
    Thanks, Félix Sipma.
  * Debootstrap.built now supports bootstrapping chroots for foreign
    OS's, using qemu-user-static.
  * Qemu: New module.
  * FlashKernel: New module, can be used to create disk images for arm
    boards using flash-kernel.

 -- Joey Hess <id@joeyh.name>  Thu, 02 Nov 2017 10:28:44 -0400

propellor (4.9.0) unstable; urgency=medium

  * When the ipv4 and ipv6 properties are used with a container, avoid
    propagating the address out to the host.
  * DnsInfo has been replaced with DnsInfoPropagated and
    DnsInfoUnpropagated. (API change)
  * Code that used fromDnsInfo . fromInfo changes to use getDnsInfo.
  * addDNS takes an additional Bool parameter to control whether
    the DNS info should propagate out of containers. (API change)
  * Made the PropellorRepo.hasOriginUrl property override the repository
    url that --spin passes to a host.
  * PropellorRepo.hasOriginUrl type changed to include HasInfo. (API change)
  * Fstab.mounted: Create mount point if necessary, and mount it
    if it's not already mounted.
    Thanks, Nicolas Schodet
  * Properties that check for an empty directory now treat a directory
    containing only "lost+found" as effectively empty, to support
    situations where the directory is a mount point of an EXT* filesystem.
    Thanks, Nicolas Schodet
  * Make addInfo accumulate Info in order properties appear, not
    reverse order.
    This fixes a bug involving reverting Systemd.resolvConfed or
    Systemd.linkJournal.

 -- Joey Hess <id@joeyh.name>  Wed, 25 Oct 2017 13:02:14 -0400

propellor (4.8.1) unstable; urgency=medium

  * Borg: Fix propigation of exit status of borg backup.
  * Borg: Fix handling of UseSshKey.

 -- Joey Hess <id@joeyh.name>  Mon, 25 Sep 2017 17:19:49 -0400

propellor (4.8.0) unstable; urgency=medium
