@@ -129,6 +129,7 @@ Library
     Propellor.Property.Locale
     Propellor.Property.Logcheck
     Propellor.Property.Lvm
+    Propellor.Property.Machine
     Propellor.Property.Mount
     Propellor.Property.Network
     Propellor.Property.Nginx
